--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,14 +2,13 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "ts-node",
       "type": "node",
       "request": "launch",
-      "args": ["${relativeFile}"],
-      "runtimeArgs": ["-r", "ts-node/register"],
-      "cwd": "${workspaceRoot}",
-      "internalConsoleOptions": "openOnSessionStart",
-      "outputCapture": "std"
+      "name": "Run current script",
+      "runtimeExecutable": "npx",
+      "runtimeArgs": ["tsx"],
+      "program": "${file}",
+      "skipFiles": ["<node_internals>/**"]
     }
   ]
 }
